[package]
name = "submap"
version = "0.2.3"
edition = "2021"
authors = ["Sergei S. <div@altertech.com>"]
license = "Apache-2.0"
repository = "https://github.com/alttch/submap"
description = "B-Tree map for pub/sub services"
readme = "README.md"
keywords = ["pubsub", "subscription", "b-tree", "btree", "map"]

[package.metadata.docs.rs]
features = ["digest"]

[package.metadata.playground]
features = ["digest"]

[dependencies]
sha2 = { version = "0.10.1", optional = true }
openssl = { version = "0.10.42", optional = true }

[features]
digest = ["sha2"]
native-digest = ["openssl"]
openssl-vendored = ["openssl/vendored"]
