[package]
name = "submap"
version = "0.2.6"
edition = "2021"
authors = ["Serhij S. <div@altertech.com>"]
license = "Apache-2.0"
repository = "https://github.com/alttch/submap"
description = "B-Tree map for pub/sub services"
readme = "README.md"
keywords = ["pubsub", "subscription", "b-tree", "btree", "map"]

[package.metadata.docs.rs]
features = ["digest"]

[package.metadata.playground]
features = ["digest"]

[dependencies]
sha2 = { version = "0.10.8", optional = true }
openssl = { version = "0.10.62", optional = true }
indexmap = { version = "2.1.0", optional = true }

[features]
digest = ["sha2"]
native-digest = ["openssl"]
openssl-vendored = ["openssl/vendored"]
